syntax = "proto3";

package genres;

service GenresService {
  rpc GetGenres (GetGenresRequest) returns (GetGenresResponse) {}
}

message GetGenresRequest {}

message GetGenresResponse {
  repeated string genres = 1;
}

